--- a/app/src/main/res/layout/country_item.xml
+++ b/app/src/main/res/layout/country_item.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
 
     <ImageView
             android:layout_width="32dp"
             android:layout_height="32sp" app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
-            android:id="@+id/countryItemFlag" android:layout_marginTop="8dp"
+            android:id="@+id/countryItemFlagView" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"/>
@@ -16,8 +15,8 @@
             android:text="country"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/countryItemName"
-            app:layout_constraintStart_toEndOf="@+id/countryItemFlag" android:layout_marginStart="8dp"
+            android:id="@+id/countryItemNameView"
+            app:layout_constraintStart_toEndOf="@+id/countryItemFlagView" android:layout_marginStart="8dp"
             android:textSize="14sp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
