--- a/app/src/main/res/layout/activity_single_country.xml
+++ b/app/src/main/res/layout/activity_single_country.xml
@@ -10,7 +10,7 @@
     <ImageView
             android:layout_width="48dp"
             android:layout_height="48dp" app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
-            android:id="@+id/countryFlag"
+            android:id="@+id/countryFlagView"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
     <TextView
@@ -18,8 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/countryNameView" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/countryFlag" android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/countryFlag"
+            app:layout_constraintStart_toEndOf="@+id/countryFlagView" android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/countryFlagView"
             android:textSize="24sp"/>
     <TextView
             android:text="country_details"
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/countryDetails"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/countryFlag"
+            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/countryFlagView"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
     <com.google.android.gms.maps.MapView
             android:layout_width="0dp"
