--- a/app/src/main/res/layout/activity_single_country.xml
+++ b/app/src/main/res/layout/activity_single_country.xml
@@ -8,33 +8,40 @@
         tools:context=".single_country.SingleCountryActivity">
 
     <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp" app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
             android:id="@+id/countryFlagView"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
-    <TextView
-            android:text="country"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/countryNameView" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/countryFlagView" android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/countryFlagView"
-            android:textSize="24sp"/>
+
     <TextView
             android:text="country_details"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/countryDetails"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/countryFlagView"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
-    <com.google.android.gms.maps.MapView
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toEndOf="@+id/countryFlagView"
+            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/countryFlagView"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/countryFlagView"
+            android:layout_marginBottom="8dp"/>
+
+    <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:id="@+id/mapView" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/countryDetails" android:layout_marginTop="16dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/countryFlagView" android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+            android:id="@+id/cardView">
+
+        <com.google.android.gms.maps.MapView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/mapView"/>
+    </android.support.v7.widget.CardView>
+
 </android.support.constraint.ConstraintLayout>
