--- a/app/src/main/res/layout/country_item.xml
+++ b/app/src/main/res/layout/country_item.xml
@@ -5,11 +5,11 @@
                                              android:layout_height="wrap_content">
 
     <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32sp" app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
+            android:layout_width="48dp"
+            android:layout_height="48dp" app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
             android:id="@+id/countryItemFlagView" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"/>
     <TextView
             android:text="country"
