--- a/app/src/main/res/layout/activity_single_country.xml
+++ b/app/src/main/res/layout/activity_single_country.xml
@@ -7,23 +7,34 @@
         android:layout_height="match_parent"
         tools:context=".single_country.SingleCountryActivity">
 
-    <ImageView
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
-            android:id="@+id/countryFlagView"
+    <android.support.v7.widget.CardView
+            android:layout_width="112dp"
+            android:layout_height="112dp"
+            android:id="@+id/countryflagBackground"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="4dp"
+            app:cardBackgroundColor="#adabab"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:layout_gravity="center"
+                app:srcCompat="@android:drawable/ic_dialog_alert"
+                android:id="@+id/countryFlagView"/>
+    </android.support.v7.widget.CardView>
+
 
     <TextView
-            android:text="country_details"
+            android:text="@string/country_details"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/countryDetails"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toEndOf="@+id/countryFlagView"
-            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/countryFlagView"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/countryFlagView"
+            app:layout_constraintStart_toEndOf="@+id/countryflagBackground"
+            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/countryflagBackground"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/countryflagBackground"
             android:layout_marginBottom="8dp"/>
 
     <android.support.v7.widget.CardView
@@ -34,7 +45,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/countryFlagView" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/countryflagBackground" android:layout_marginTop="8dp"
             android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
             android:id="@+id/cardView">
 
