--- a/app/src/main/res/layout/activity_single_country.xml
+++ b/app/src/main/res/layout/activity_single_country.xml
@@ -8,51 +8,47 @@
         tools:context=".single_country.SingleCountryActivity">
 
     <android.support.v7.widget.CardView
+            android:id="@+id/countryflagBackground"
+            style="@style/cardView_falgBacground"
             android:layout_width="112dp"
             android:layout_height="112dp"
-            android:id="@+id/countryflagBackground"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="4dp"
-            app:cardBackgroundColor="#adabab"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+                android:id="@+id/countryFlagView"
+                style="@style/flagImageView"
                 android:layout_width="96dp"
-                android:layout_height="96dp"
-                android:layout_gravity="center"
-                app:srcCompat="@android:drawable/ic_dialog_alert"
-                android:id="@+id/countryFlagView"/>
+                android:layout_height="96dp" />
     </android.support.v7.widget.CardView>
 
 
     <TextView
+            android:id="@+id/countryDetails"
             android:text="@string/country_details"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/countryDetails"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_margin="@dimen/standard_margin"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/countryflagBackground"
-            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/countryflagBackground"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/countryflagBackground"
-            android:layout_marginBottom="8dp"/>
+            app:layout_constraintBottom_toBottomOf="@+id/countryflagBackground"
+            app:layout_constraintTop_toTopOf="@+id/countryflagBackground"/>
 
     <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:cardCornerRadius="4dp"
-            app:cardElevation="0dp"
+            app:cardCornerRadius="@dimen/cardView_background_radius"
+            app:cardElevation="@dimen/cardView_background_elevation"
+            android:layout_margin="@dimen/standard_margin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/countryflagBackground" android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            android:id="@+id/cardView">
+            app:layout_constraintTop_toBottomOf="@+id/countryflagBackground">
 
         <com.google.android.gms.maps.MapView
+                android:id="@+id/mapView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/mapView"/>
+                android:layout_height="match_parent"/>
     </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
