--- a/app/src/main/res/layout/country_item.xml
+++ b/app/src/main/res/layout/country_item.xml
@@ -5,32 +5,31 @@
                                              android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+            android:id="@+id/flagBackground"
+            style="@style/cardView_falgBacground"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginTop="8dp"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="4dp"
-            app:cardBackgroundColor="#adabab"
-            android:id="@+id/flagBackground"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" >
 
         <ImageView
+                android:id="@+id/countryItemFlagView"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
-                app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
-                android:id="@+id/countryItemFlagView" />
+                app:srcCompat="@drawable/common_google_signin_btn_icon_dark"/>
 
     </android.support.v7.widget.CardView>
 
     <TextView
-            android:text="country"
+            android:id="@+id/countryItemNameView"
+            android:text="@string/country"
+            android:layout_margin="@dimen/standard_margin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/countryItemNameView"
-            app:layout_constraintStart_toEndOf="@+id/flagBackground" android:layout_marginStart="8dp"
-            android:textSize="18sp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            android:textSize="18sp"
+            app:layout_constraintStart_toEndOf="@+id/flagBackground"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
