--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="cardView_falgBacground" parent="CardView" >
+        <item name="cardBackgroundColor">@color/lightGrey</item>
+        <item name="cardCornerRadius">@dimen/cardView_background_radius</item>
+        <item name="cardElevation">@dimen/cardView_background_elevation</item>
+        <item name="android:layout_margin">@dimen/standard_margin</item>
+    </style>
+
+    <style name="flagImageView" >
+        <item name="srcCompat">@android:drawable/ic_dialog_alert</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
 </resources>
